// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     for 
    $12.98
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary correctly with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    21
     
    expenses
     for 
    $2,350,009.87
  </h1>
</div>
`;
